<resources>
    <string name="app_name">notesSample</string>
    <string name="my_notes">My Notes!</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_item">New</string>
    <string name="title_todo">To-Do</string>
    <string name="title_meetings">Meetings</string>
    <string name="title_deadlines">Deadlines</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_colour">Pick Colour</string>
    <string name="add_image">Add Image</string>
    <string name="options">Options</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="search_dashboard">Search Dashboard</string>
    <string name="title_diary">Diary</string>
    <string name="search_notes">Search Notes</string>
    <string name="search_diary">Search Diary</string>
    <string name="type_diary_here">Type Diary Here</string>
    <string name="diary_title">Diary Title</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="are_you_sure_you_want_to_delete_this_diary">Are you sure you want to delete this entry?</string>
    <string name="deadline_title">Deadline Title</string>
    <string name="deadline_subtitle">Deadline Subtitle</string>
    <string name="type_deadline_here">Type deadline here</string>
    <string name="title_deadline">Deadline Title</string>
    <string name="search_deadline">Search Deadline</string>
    <string name="are_you_sure_you_want_to_delete_this_deadline">Are you sure you want to delete this deadline?</string>
</resources>